--- a/_config.yml
+++ b/_config.yml
@@ -56,13 +56,13 @@ exclude: [vendor]
 # or "master" otherwise
 safe: false
 lsi: false
-username: biomadeira
+username: saltfactory
 repo: jasper
 branch: master
 relative_source: ../jasper/
 destination: ../jasper-pages/
-production_url:  https://biomadeira.github.io/jasper/
-source_url:      https://github.com/biomadeira/jasper/
+production_url:  https://saltfactory.github.io/jasper/
+source_url:      https://github.com/saltfactory/jasper/
 
 exclude:
   - README.md
